apps/guestbook/backend/networking/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: guestbook-backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
